# Virtual-Personal-Assistant

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/assistant/: __init__.py
src/assistant/config/: settings.py
src/assistant/core/: assistant.py  command_router.py  scheduler.py  speech.py
src/assistant/database/: models.py  repository.py
src/assistant/handlers/: base.py  datetime_handler.py  news.py  reminder.py  search.py  system.py  weather.py
src/assistant/utils/: logger.py
tests/: conftest.py
tests/test_core/: test_database.py  test_router.py
tests/test_handlers/: test_handlers.py  test_weather.py
